# ChangeLog for lxde-base/lxde-icon-theme
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/lxde-base/lxde-icon-theme/ChangeLog,v 1.15 2013/02/23 02:03:28 zmedico Exp $

  23 Feb 2013; Zac Medico <zmedico@gentoo.org> lxde-icon-theme-0.5.0.ebuild:
  Add ~arm-linux and ~x86-linux keywords.

  25 Aug 2012; Markos Chandras <hwoarang@gentoo.org>
  -lxde-icon-theme-0.0.1.ebuild:
  Remove old LXDE packages

  14 Aug 2012; Johannes Huber <johu@gentoo.org> lxde-icon-theme-0.5.0.ebuild:
  Stable for x86, wrt bug #430494

  11 Aug 2012; Agostino Sarubbo <ago@gentoo.org> lxde-icon-theme-0.5.0.ebuild:
  Stable for amd64, wrt bug #430494

  09 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  lxde-icon-theme-0.5.0.ebuild:
  Stable arm, bug #430494

  09 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  lxde-icon-theme-0.5.0.ebuild:
  Stable ppc, bug #430494

*lxde-icon-theme-0.5.0 (12 May 2012)

  12 May 2012; Markos Chandras <hwoarang@gentoo.org>
  +lxde-icon-theme-0.5.0.ebuild:
  Version bump

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> lxde-icon-theme-0.0.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  07 Mar 2011; Tobias Klausmann <klausman@gentoo.org>
  lxde-icon-theme-0.0.1.ebuild:
  Keyworded on alpha, bug #330911

  28 Feb 2010; nixnut <nixnut@gentoo.org> lxde-icon-theme-0.0.1.ebuild:
  ppc stable #306433

  25 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  lxde-icon-theme-0.0.1.ebuild:
  stable x86, bug 306433

  23 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  lxde-icon-theme-0.0.1.ebuild:
  arm stable wrt #306433

  23 Feb 2010; Markos Chandras <hwoarang@gentoo.org>
  lxde-icon-theme-0.0.1.ebuild:
  Stable on amd64 wrt bug #306433

  24 Jan 2010; Raúl Porcel <armin76@gentoo.org>
  lxde-icon-theme-0.0.1.ebuild:
  Add ~arm

*lxde-icon-theme-0.0.1 (22 Jan 2010)

  22 Jan 2010; Víctor Ostorga <vostorga@gentoo.org>
  +lxde-icon-theme-0.0.1.ebuild: