@@ -2,13 +2,24 @@
 Hash: SHA256
 
 DIST lxde-icon-theme-0.5.0.tar.bz2 4545598 SHA256 49dc61c46c4a0ca9298f9e0866bcf7212a08ddaa71f15bfabfb0220fe1efa848 SHA512 4ca3e94b5826f7fe87d840feddf0c130fa77e8f14f22a59d9749252a5106d54661237e3c9286f4880d0aaa50bd330cb4bfb9d663ca35d6ee4b9e3c2af30fe9ab WHIRLPOOL 79b7aa6a42e28086f2d88d1482d211b1c70350af7cb925ce222e222f39cbc547f8269aad31370af15308295d42f587d369a3575cfa540c198693aeccc43fe534
+EBUILD lxde-icon-theme-0.5.0-r1.ebuild 756 SHA256 0b9b034f9fbfea402ca85ea90943dbfab467c0d4bb36f851c028a84960380e10 SHA512 479f97d8cd9020bc54c91d31963ab0ecb33b43dbbf96e222d2cb7a1302761fc2403d80cca778dc6b877c860e0ce1ee1004acf7d8a61769991d6c85a63d79c8fd WHIRLPOOL 11b0bcf9206e409fc10f515a6a6f592e9f0d427be7028704e4a343f565bf36d8835fe50ddcf35883a167754286173449269985bde870276b7c1dfaa37ccf8caa
 EBUILD lxde-icon-theme-0.5.0.ebuild 592 SHA256 8447edb326d2804e030a2a2caa07bae5f84831432bd50e92873267c60f8e6478 SHA512 a52d8ecedf13cc4d40e2a831da7d414242eb9ef6a0dc8f9395d10df1dc8c223cf4efec8c934654b6056ee629523008aad1f5052da3692c454e1353a7e5ea21a1 WHIRLPOOL e782ee27bbb9535ba0be9b6ada7a2dd084c0511862279fd013ed491e560eacd44f6685d7085e796c723440eaee0286f43c113c045a24ce3b95229c7f21aaebef
-MISC ChangeLog 2050 SHA256 449cdabe24d9ea065c7e37e82e1118dedc3116f935661293922beac104d03308 SHA512 4c5fb2244a97a756cc3e31beed855ba09fa79b5b742b47225ff1b1191d6ee95dda08f743f1fcf55d92b5ff4f241b40c7099f2253e6fc4a92e9694916410976d4 WHIRLPOOL 0d5a4f492f3d16969ec40f6436ce1a3969de65434d71d64d758caa0c2a4740ef1de2106c84535d94ea3e9cc26e9f96b9ca9b36ee715c7e7f7c4f6a7cac227d12
+MISC ChangeLog 2246 SHA256 552edc92b66348ea95118e2336af159329b57e54115272a16543216f14307547 SHA512 ad159bb7ef919de1063f7fd0eba4df56a0d39dfaa0525041be4bff059667c4f97773bd797bc6b8bac595283659808316ce3a1163e3595b7163ac2c798d7a1c9a WHIRLPOOL b5c32964b54b6bfa4dad774afd7208f6670a11e26d39f82a104383e698fb20531235b34461c9abdf7c32eb59704383e85a48012a60e1df4956cf504cf6d895ee
 MISC metadata.xml 158 SHA256 9a4e79f77bc3e825c79c2d57e658c8460f7f7535a25a7beacbe0c94f2378ba57 SHA512 c6d71f05dbe4c805971c6f9798798a8d1da6155b3fdb2ed19c8a6df33b82467a878127640612304bc29c9f7f5209e604cfdab49d1084ff3dab1d15a8129eb7bc WHIRLPOOL 04c34cac223f8b7d6fd0940386fdb553545be42018e7e4a4d315da3562ba5006b9d4a9dc7625ec80b4bfa4175cb2ef1f5482b540c7d29b27b3884a4cdd81ed9b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlEoI3IACgkQ/ejvha5XGaPfoQCgjLB8R4q3u/tTva67MH8zCPZy
-v9IAnigjcXmM6f8HReMZLqzP34aM+hBI
-=+D7Y
+iQIcBAEBCAAGBQJSuSLnAAoJENb1ecI556su/xgP+we2w2MPOELREEac1NWQ4R93
+VopuRufRIiWE3H8pTjpamJJstHn5lopeyMTKUbj04D46ZJdoss+8cirnU863Z0jI
+DCUldziDIt1CDWQitX7vXxyxj6R9NBx22VxkH/vxQWiCtVV9VmpFl49AwdJlrlpa
+MJN1gyH3Yzkd7iZuqgNBAZeeZZGCWY6cKB15J0EoQhaxEuOrMlpuzQDsvM28hUdl
+36E/Rhdm2K3mhUMsISkVfBp3p0JMKL5Z7GarxvuH6rpVIMJYdKO7HlRcBJ71t4ON
+FxuEPJ9OwV8CUeNBpxSQIyxEUc49BTC6qRSuXU7mfkDmarljJI1XRk8xVGGceQGS
+CGPz1lU74wYINqgXO01cJMg/7zmBeIDK2ZCau8tg2uL+bcdBapa7TlfnWPyfIwOT
+iiFIiC1KJ90nSE0UQZgH8w6O8kUcCwN2NH+lHWoE3HJeONn0TnQhdeB4NUMKH3GA
+5u2S2m8CLZPZ9szLRS0emCY0kXq79BFUoMLn2IEuBsl/Bb97OKFBtckjdFdHEq8s
+YPKwAH3JgWGSqSZsiKcXUosmEQLaa6KmqOqETbACXbny9mGxisF6XJEx3SZYEA/X
+/C8jemV5JLblMGxF2qEhONIL1tVFpzEpmaQH+akcZM3M/8AlXJVRfu+A1LQPFf5p
+zkxvMOIXGVXwmzCD+p14
+=BPEe
 -----END PGP SIGNATURE-----
